--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ email: uoe.humaned@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   The Humanoid Robotics Society is an interdisciplinary group of students focused on the long-term research, 
   development and implementation of new technologies in the field of limbs, exoskeletons, humanoid robots and bipedal movement.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/humanEd" # the subpath of your site, e.g. /blog
+url: "neerajC05.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
