--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -20,13 +20,13 @@
   image: Divyansh_Gupta.png
 
 - name: Henry Wang
-  position: Sponsorship & Marketing Manager
+  position: Sponsorship & Marketing
   year: Year 1
   course: MSc Science & Religion
   linkedin: https://www.linkedin.com/in/thisishenryw/
   image: Henry_Wang.png
 
-- name: Juan Del Àguila Ferrandis
+- name: Juan Del Àguila
   position: Technical Director
   year: Year 3
   course: BEng Computer Science & Mathematics
