--- a/_data/sponsorship_marketing.yml
+++ b/_data/sponsorship_marketing.yml
@@ -8,9 +8,9 @@
   year: Year 2
   course: Awaiting Confirmation
   linkedin: Awaiting Confirmation
-  image: 
-
-- name: Neeraj Chekutty
+  image: Josie_Harrison.jpg
+  
+- name: Niraj Chekutty
   year: Year 3
   course: BSc Artificial Intelligence & Computer Science
   linkedin: https://www.linkedin.com/in/neeraj-chekutty-b176141b6/
