--- a/_data/committee.yml
+++ b/_data/committee.yml
@@ -1,48 +1,48 @@
 - name: Sergio Miguez
   position: President & Co-Founder
-  year: Year 3
+  year: Batch of 2024
   course: MEng Electronics & Computer Science
   linkedin: https://www.linkedin.com/in/sergio-miguez-aparicio/
   image: Sergio_Miguez.png
 
 - name: Anaïs Jeger
   position: Secretary & Co-Founder
-  year: Year 3
+  year: Batch of 2023
   course: BEng Electronics & Computer Science
   linkedin: https://www.linkedin.com/in/ana%C3%AFs-jeger-40ab52197/
   image: Anais_Jeger.png
 
 - name: Divyansh Gupta
   position: Treasurer
-  year: Year 3
+  year: Batch of 2023
   course: BEng Chemical Engineering
   linkedin: https://www.linkedin.com/in/divyansh-gupta-65a505202/
   image: Divyansh_Gupta.png
 
 - name: Henry Wang
   position: Sponsorship & Marketing
-  year: Year 1
+  year: Batch of 2022
   course: MSc Science & Religion
   linkedin: https://www.linkedin.com/in/thisishenryw/
   image: Henry_Wang.png
 
 - name: Juan Del Àguila
   position: Technical Director
-  year: Year 3
+  year: Batch of 2023
   course: BEng Computer Science & Mathematics
   linkedin: https://www.linkedin.com/in/juan-del-aguila-ferrandis/
   image: Juan_del_Aguila.png
 
 - name: Pablo Morandé
   position: Technical Director
-  year: Year 3
+  year: Batch of 2023
   course: BSc Theoretical Physics
   linkedin: https://www.linkedin.com/in/pablo-morand%C3%A9/
   image: Pablo_Morande.png
 
 - name: Yordan Tsvetkov
   position: Technical Director
-  year: Year 2
+  year: Batch of 2024
   course: BEng Mechanical Engineering
   linkedin: https://www.linkedin.com/in/yordan-tsvetkov-784b7619b/
   image: Yordan_Tsvetkov.jpg
