--- a/_data/sponsorship_marketing.yml
+++ b/_data/sponsorship_marketing.yml
@@ -16,15 +16,16 @@
   linkedin: https://www.linkedin.com/in/neeraj-chekutty-b176141b6/
   image: Neeraj_Chekutty.jpg
 
+- name: Leticia Diaz Robledo
+  year: Batch of 2023
+  course: BSc Artificial Intelligence and Computer Science
+  linkedin: https://www.linkedin.com/in/leticia-robledo/
+  image: Leticia_Diaz_Robledo.jpg
+  
 - name: Thomas Ralph
-  year: Year 3
+  year: Batch of 2023
   course: BEng Mechanical Engineering
   linkedin: https://www.linkedin.com/in/thomas-ralph-269190166/
   image: Thomas_Ralph.png
 
-- name: Leticia Diaz Robledo
-  year: Awaiting Confirmation
-  course: Awaiting Confirmation
-  linkedin: Awaiting Confirmation
-  image: 
 
