--- a/_data/biomimetic.yml
+++ b/_data/biomimetic.yml
@@ -2,4 +2,34 @@
   year: Batch of 2023
   course: BSc Computer Science & Mathematics
   linkedin: https://www.linkedin.com/in/antonio-leon-villares-7a341b204
-  image: Antonio_Leon_Villare.jpeg
+  image: Antonio_Leon.jpg
+
+- name: Ewurama Akuoko
+  year: PhD
+  course: Informatics
+  linkedin: http://linkedin.com/in/em2021
+  image: Ewurama_Akuoko.jpeg
+
+- name: Sofia Gilardini
+  year: Batch of 2024
+  course: MEng Electrical and Mechanical Engineering
+  linkedin: https://www.linkedin.com/in/sofia-gilardini-b835651b4/
+  image: Sofia_Gilardini.jpeg
+
+- name: Sui Channie
+  year: Batch of 2025
+  course: BSc Astrophysics
+  linkedin: http://linkedin.com/in/channie-changsui
+  image: Sui_Channie.jpeg
+
+- name: Gökçe Uzun
+  year: Batch of 2023
+  course: BEng Electronics and Computer Engineering 
+  linkedin: www.linkedin.com/in/gökçe-uzun-33a2991ab
+  image: 
+
+- name: Meina Lin Wei
+  year: Batch of 2025
+  course: BSc Artificial Intelligence and Computer Science
+  linkedin: https://www.linkedin.com/in/meinalw/
+  image: Meina_Lin_Wei.jpeg
